Renaming psychedelic14723 to manga168 Pantip เว็บไซต์ที่เชื่อถือได้ [Play168]

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "psychedelic14723",
+  "name": "manga168 Pantip เว็บไซต์ที่เชื่อถือได้ [Play168]",
   "theme": "syntax",
   "version": "0.0.0",
   "description": "manga168 Pantip เว็บไซต์ที่เชื่อถือได้ [Play168] ⭐ สมัครสมาชิกเข้ามาร่วมเล่นเดิมพันเกมสล็อตออนไลน์แตกง่าย ไม่ต้องวางเงินมัดจำ หรือฝากเงินเพื่อการเล่นใดๆ SLOT เว็บตรงแตกง่าย สมัครฟรี มีโปรโมชั่นพิเศษสำหรับมือใหม่ ที่ไม่เคยเล่นมาก่อน",
